# UnfinishedC2

./: README
Client/: Cargo.toml
Client/src/: main.rs
Server/: Cargo.toml
Server/src/: main.rs
