[package]
name = "c2client1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
async-port-scanner = "0.1.4"
futures = "0.3.25"
async-std = "1.12.0"
lazy_static = "1.4.0"
tokio = { version = "0.2.25", features = ["full"] }
winapi = {version = "0.3.8", features=[
    "winnt",
    "memoryapi",
    "errhandlingapi",
    "processthreadsapi",
    "synchapi",
    "winbase",
    "handleapi",
    "libloaderapi"
]}
kernel32-sys = "0.2.2"
memexec = "0.2.0"
libc = "0.2.139"
hex = "0.4.3"
ldap3 = "0.11.1"
regex = "1.7.1"
encoding = "0.2.33"
